# ckboots

./: Cargo.toml  README.md
cons/travel/: Cargo.toml
cons/travel/src/: main.rs
cons/types/: Cargo.toml
cons/types/src/: lib.rs
contract-playground/: Cargo.toml  README.md
contract-playground/contracts/contract-playground/: Cargo.toml
contract-playground/contracts/entry/: Cargo.toml
contract-playground/contracts/entry/src/: entry.rs  error.rs
contract-playground/tests/src/: tests.rs
crates/ckboots/: Cargo.toml
crates/ckboots/derives/: Cargo.toml
crates/ckboots/derives/src/: lib.rs  on_chain.rs
crates/ckboots/src/: app.rs  contract.rs  lib.rs  on_chain.rs
crates/frog-travel/: Cargo.toml
derives/: Cargo.toml
derives/src/: app.rs  contract.rs  lib.rs  on_chain.rs
examples/frog-travel/: Cargo.toml
examples/frog-travel/src/: types.rs
proj-name-contracts/: Cargo.toml  capsule.toml
proj-name-contracts/contracts/_entry/: Cargo.toml
proj-name-contracts/contracts/_entry/src/: entry.rs
proj-name-contracts/contracts/travel/: Cargo.toml
proj-name-contracts/contracts/travel/src/: entry.rs  error.rs  main.rs
proj-name-contracts/contracts/types/: Cargo.toml
proj-name-contracts/contracts/types/src/: lib.rs
src/: app.rs  cell_manager.rs  code_str.rs  contract.rs  lib.rs  on_chain.rs  prelude.rs  utils.rs
src/generators/: mod.rs
src/generators/contract/: _utils.rs  contract.rs  entry.rs  mod.rs  types.rs
src/generators/contract/capsule/: capsule.toml  mod.rs
tests/: lib.rs
