[package]
name = "ckboots"
version = "0.1.0"
edition = "2021"
authors = ["JeremyHe<yiliang.he@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-hash = "0.106.0"
ckb-jsonrpc-types = "0.106.0"
ckb-sdk = "2.4.0"
ckb-types = "0.106.0"
secp256k1 = "0.24"

quote = "1.0.15"
ckb-std = "0.10.0"
proc-macro2 = "1.0.36"
syn = {version = "1.0.86", features = ["full"]}

ckboots-derives = { path = "./derives", version = "0.1.0" }

[features]
contract-generator = []

[workspace]
members = [
    "examples/frog-travel",
]
