[package]
name = "frog-travel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckboots = {path = "../../", version = "*"}
ckboots-derives = {path = "../../derives", version = "*"}

[dev-dependencies]
ckboots = {path = "../../", version = "*", features = ["contract-generator"]}
ckboots-derives = {path = "../../derives", version = "*", features = ["contract-generator"]}
